Fixed esc cancelling